deployment/home-assistant/appdaemon.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: home
  name: appdaemon
  labels:
    app: appdaemon
spec:
  type: ClusterIP
  selector:
    app: appdaemon
  ports:
    - name: http 
      protocol: TCP
      port: 5050
      targetPort: 5050
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home
  name: appdaemon
  labels:
    app: appdaemon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appdaemon
  template: 
    metadata:
      labels:
        app: appdaemon
      annotations:
        configHash: "3"
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: appdaemon
      tolerations:
      - key: "arm64"
        operator: "Exists"
        effect: "PreferNoSchedule"
      containers:
        - name: appdaemon
          image: acockburn/appdaemon:latest
          imagePullPolicy: IfNotPresent
          ports: 
            - containerPort: 5050
              name: http
          volumeMounts:
            - mountPath: /conf
              name: data
