deployment/home-assistant/piper.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: piper
  namespace: home
  labels:
    app: whisper
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: piper
  template:
    metadata:
      labels:
        app: piper
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: piper
      containers:
        - name: piper
          image: rhasspy/wyoming-piper:1.5.0
          #imagePullPolicy: IfNotPresent
          args:
            - --voice
            - en_US-lessac-medium
          ports:
            - containerPort: 10200
              protocol: TCP
              name: piper
          volumeMounts:
            - mountPath: /data
              name: data
          resources:
            limits:
              cpu: 12000m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: piper
  namespace: home
spec:
  selector:
    app: piper
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 10200
      targetPort: 10200
