deployment/home-assistant/whisper.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisper
  namespace: home
  labels:
    app: whisper
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: whisper
  template:
    metadata:
      labels:
        app: whisper
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: whisper
      containers:
        - name: whisper
          image: rhasspy/wyoming-whisper:0.0.3
          #imagePullPolicy: IfNotPresent
          args:
            - --model
            - small
            - --language
            - en
          ports:
            - containerPort: 10300
              protocol: TCP
              name: whisper
          volumeMounts:
            - mountPath: /data
              name: data
          resources:
            limits:
              cpu: 12000m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: whisper
  namespace: home
spec:
  selector:
    app: whisper
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 10300
      targetPort: 10300
