deployment/home-assistant/home-assistant-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-https
  namespace: home
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ha.michaelgoldstein.co`)
      services:
        - name: home-assistant
          port: 8123
  tls:
    secretName: letsencrypt-prod-cert
